resize dot plot for DRC

--- a/sample-viewer/src/app/filters/filter-location/filter-location.component.html
+++ b/sample-viewer/src/app/filters/filter-location/filter-location.component.html
@@ -14,7 +14,7 @@
           <ng-container *ngSwitchCase="'GN'">Guinea</ng-container>
           <ng-container *ngSwitchCase="'LR'">Liberia</ng-container>
           <ng-container *ngSwitchCase="'US'">United States</ng-container>
-          <ng-container *ngSwitchCase="'CD'">Democratic Republic of the Congo</ng-container>
+          <ng-container *ngSwitchCase="'CD'">Democratic Rep. Congo</ng-container>
           <ng-container *ngSwitchCase="'CG'">Republic of the Congo</ng-container>
           <ng-container *ngSwitchCase="'GA'">Gabon</ng-container>
           <ng-container *ngSwitchCase="'CI'">C&ocirc;te d'Ivoire</ng-container>
