--- a/sample-viewer/src/app/filters/filter-location/filter-location.component.html
+++ b/sample-viewer/src/app/filters/filter-location/filter-location.component.html
@@ -2,6 +2,8 @@
   <h4 class="filter-label">location</h4>
 
 <div class="container">
+  <svg-icon [icon]="'GA'" [class]="'country-icon SL-icon'"></svg-icon>
+
   <div *ngFor="let ctry of countries" (click)="selectCountry(ctry.term)" class="location mat-shadow" [ngClass]="ctry.term">
     <div class="container country-container" [ngClass]="{'disabled': ctry.disabled}">
       <svg-icon [icon]="ctry.term" [class]="'country-icon ' + ctry.term + '-icon'" *ngIf="ctry.term && ctry.term !== 'unknown' && ctry.term !== 'Unknown'"></svg-icon>
@@ -26,7 +28,7 @@
           unknown
         </div>
 
-        <div class="adm0-count">{{ ctry.count || 0 }}</div>
+        <div class="adm0-count">{{ ctry.count | number:'1.0-0' || 0 }}</div>
       </div>
     </div>
     </div>
