--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -1,3 +1,6 @@
+<svg-icon icon="cvisb" class="cvisb-icon"></svg-icon>
+<svg-icon icon="sarscov2-virus-seq" class="sarscov2-virus-seq-icon"></svg-icon>
+
 <div *ngIf="datasets$ | async as datasets">
 
   <div>
