--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -48,6 +48,11 @@ $ebola-dk:    #E91E63;
 $ebola-md:    #F06292;
 $ebola-lt:    #F8BBD0;
 
+$covid-19-color: #297aa2;
+$covid-19-dk:    #426eb5;
+$covid-19-md:    #3399cb;
+$covid-19-lt:    #b2ebff;
+
 // Sex colors
 // $male-color: #f57f17;
 $male-color: #fe643b;
