allow julia to delete stuff :anguished:

--- a/sample-viewer/src/app/delete-data/delete-data.component.html
+++ b/sample-viewer/src/app/delete-data/delete-data.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user.email === 'laura.d.hughes@gmail.com'; else not_auth">
+<div *ngIf="user.email === 'laura.d.hughes@gmail.com' || user.email === 'julia.l.mullen@gmail.com'; else not_auth">
   <h1>WARNING WARNING WARNING!</h1>
   <h2>This deletes data. Proceed with caution.</h2>
 
