remove console.logs

--- a/sample-viewer/src/app/download-data/download-data.component.html
+++ b/sample-viewer/src/app/download-data/download-data.component.html
@@ -1,6 +1,7 @@
-<ng-template *ngIf="isDone">
+<div *ngIf="isDone">
   Download complete! Be sure to allow multiple file downloads if you want to download the experimental data and the patient metadata.
-</ng-template>
-<ng-template *ngIf="!isDone">
+</div>
+
+<div *ngIf="!isDone">
   Fetching and downloading {{ filetype }} data... this can take a few minutes.
-</ng-template>
+</div>
