add mexico, jordan

--- a/sample-viewer/src/app/filters/filter-location/filter-location.component.scss
+++ b/sample-viewer/src/app/filters/filter-location/filter-location.component.scss
@@ -50,6 +50,14 @@
   fill: $drc-blue;
 }
 
+.MX-icon {
+  fill: $mexico-green;
+}
+
+.JO-icon {
+  fill: $jordan-red;
+}
+
 .CG-icon {
   fill: $congo-red;
 }
