--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -95,3 +95,7 @@ $gabon-blue: #3A75C4;
 $congo-red: #DC241F; //https://www.schemecolor.com/congo-flag-colors.php
 $congo-green: #009543;
 $congo-yellow: #FBDE4A;
+$jordan-red: #ce1126; //  https://en.wikipedia.org/wiki/Flag_of_Jordan#:~:text=The%20flag%20of%20Jordan%2C%20officially,connected%20by%20a%20red%20chevron.
+$jordan-green: #007a3d;
+$mexico-green: #006847; //https://en.wikipedia.org/wiki/Flag_of_Mexico#:~:text=The%20flag%20of%20Mexico%20(Spanish,center%20of%20the%20white%20stripe.&text=The%20central%20emblem%20is%20the,center%20of%20the%20Aztec%20empire.
+$mexico-red: #CE1125;
