--- a/sample-viewer/src/app/filters/filter-location/filter-location.component.html
+++ b/sample-viewer/src/app/filters/filter-location/filter-location.component.html
@@ -14,6 +14,8 @@
           <ng-container *ngSwitchCase="'GN'">Guinea</ng-container>
           <ng-container *ngSwitchCase="'LR'">Liberia</ng-container>
           <ng-container *ngSwitchCase="'US'">United States</ng-container>
+          <ng-container *ngSwitchCase="'JO'">Jordan</ng-container>
+          <ng-container *ngSwitchCase="'MX'">Mexico</ng-container>
           <ng-container *ngSwitchCase="'CD'">Democratic Rep. Congo</ng-container>
           <ng-container *ngSwitchCase="'CG'">Republic of the Congo</ng-container>
           <ng-container *ngSwitchCase="'GA'">Gabon</ng-container>
