--- a/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
+++ b/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
@@ -19,7 +19,7 @@
   <div class="grid-item grid-column-container" id="country-count">
     <h4 class="filter-label">country</h4>
     <div class="grid-row-container">
-      <app-choropleth [data]="dataset.counts.countries" [width]="150"></app-choropleth>
+      <app-choropleth [data]="dataset.counts.countries"></app-choropleth>
       <app-dot-plot [data]="dataset.counts.countries"></app-dot-plot>
     </div>
   </div>
