Add COVID-19 colors

--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -48,6 +48,12 @@ $ebola-dk:    #E91E63;
 $ebola-md:    #F06292;
 $ebola-lt:    #F8BBD0;
 
+
+$covid-color: #426eb5;
+$covid-dk:    #345790;
+$covid-md:    #3399cb;
+$cvoid-lt:    #b2ebff;
+
 $covid-19-color: #297aa2;
 $covid-19-dk:    #426eb5;
 $covid-19-md:    #3399cb;
