--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -452,6 +452,13 @@ svg-icon.country-icon {
   color: white;
 }
 
+.cohort.COVID-19,
+.outcome.COVID-19 {
+  background-color: $covid-color;
+  border: $covid-color 1px solid;
+  color: white;
+}
+
 .cohort.Unknown {
   background-color: $grey-100;
   border: $grey-600 1px solid;
@@ -489,6 +496,11 @@ svg-icon.country-icon {
       color: $lassa-color;
     }
 
+    &.COVID-19 {
+      background-color: lighten($covid-lt, 15%);
+      color: $covid-color;
+    }
+
     &.Unknown {
       background-color: $grey-50;
     }
@@ -503,6 +515,10 @@ svg-icon.country-icon {
 
     &.Ebola {
       color: $ebola-dk;
+    }
+
+    &.COVID-19 {
+      color: $covid-dk;
     }
 
     &.Unknown {
@@ -521,6 +537,11 @@ svg-icon.country-icon {
       color: $default-color;
     }
 
+    &.COVID-19 {
+      background-color: $covid-lt;
+      color: $default-color;
+    }
+
     &.Unknown {
       background-color: $grey-225;
       color: $default-color;
@@ -535,6 +556,11 @@ svg-icon.country-icon {
 
     &.Ebola {
       background-color: $ebola-md;
+      color: $default-color;
+    }
+
+    &.COVID-19 {
+      background-color: $covid-md;
       color: $default-color;
     }
 
@@ -701,6 +727,7 @@ button.stepper-button {
 
 .ebola-virus-seq,
 .lassa-virus-seq,
+.sarscov2-virus-seq,
 .virus-seq {
   background: #e4fffc;
 }
