--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -52,7 +52,7 @@ $ebola-lt:    #F8BBD0;
 $covid-color: #426eb5;
 $covid-dk:    #345790;
 $covid-md:    #3399cb;
-$cvoid-lt:    #b2ebff;
+$covid-lt:    #b2ebff;
 
 $covid-19-color: #297aa2;
 $covid-19-dk:    #426eb5;
