adjust colors, spacing

--- a/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.scss
@@ -39,7 +39,7 @@
   }
 
   &.COVID-19 {
-    background: lighten($covid-md, 28%);
+    background: lighten($covid-lt, 10%);
     color: $covid-md;
   }
 
