--- a/sample-viewer/src/app/provenance/provenance.component.html
+++ b/sample-viewer/src/app/provenance/provenance.component.html
@@ -26,7 +26,7 @@
     <div class="container-column source-group">
       <div class="source" *ngIf="source">
         <span class="variable-label">source: </span>
-        <span class="variable-value">{{source}}</span>
+        <span class="variable-value" *ngFor="let item of source; let i = index">{{item.name}}</span><span *ngIf="i < source.length - 2">, </span>
       </div>
 
       <app-format-citation [citations]="citation" verbosity="basic" class="citation" *ngIf="citation"></app-format-citation>
