--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -436,6 +436,7 @@ svg-icon.country-icon {
   padding: 5px;
   margin-right: 0;
   border-radius: 5px 0 0 5px;
+  white-space: nowrap;
 }
 
 .cohort.Lassa,
