--- a/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
+++ b/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
@@ -2,7 +2,7 @@
   <div class="grid-item grid-column-container">
     <div class="container count-pair">
       <div class="count-value">
-        {{dataset.counts.expt_count}}
+        {{dataset.counts.expt_count.toLocaleString()}}
       </div>
       <div class="count-label">
         experiments
