--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -1,4 +1,4 @@
-<div class="container" id="patientID" *ngIf="patientData$ | async as patientData">
+<div class="container" id="patientID" *ngIf="patientData$ | async as patientData; else noData">
   <div class="patient-container" *ngIf="patientData.patient as patient">
 
     <app-patient-nav class="nav patient-nav" [ngClass]="patient.cohort" [cohort]="patient.cohort" [expts]="exptTypes"></app-patient-nav>
@@ -135,3 +135,7 @@
   </div>
 
 </div>
+
+<ng-template #noData>
+  No patient data found
+</ng-template>
