--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -90,6 +90,9 @@ $cote-divoire-green: #009E60;
 $togo-red: #D21034;
 $togo-green: #006A4E;
 $togo-yellow: #FFCE00;
+$ghana-red: #CE1126;
+$ghana-green: #006B3F;
+$ghana-yellow: #FCD116;
 $drc-blue: #007fff; // https://en.wikipedia.org/wiki/Flag_of_the_Democratic_Republic_of_the_Congo
 $drc-red: #ce102f;
 $drc-yellow: #f7d618;
