--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -316,6 +316,10 @@ svg-icon.country-icon {
     fill: $togo-yellow;
   }
 
+  &.GH {
+    fill: $ghana-yellow;
+  }
+
   &.ML {
     fill: $mali-red;
   }
