--- a/sample-viewer/src/app/filters/filter-location/filter-location.component.html
+++ b/sample-viewer/src/app/filters/filter-location/filter-location.component.html
@@ -21,6 +21,7 @@
           <ng-container *ngSwitchCase="'GA'">Gabon</ng-container>
           <ng-container *ngSwitchCase="'CI'">C&ocirc;te d'Ivoire</ng-container>
           <ng-container *ngSwitchCase="'TG'">Togo</ng-container>
+          <ng-container *ngSwitchCase="'GH'">Ghana</ng-container>
           <ng-container *ngSwitchCase="'ML'">Mali</ng-container>
           <ng-container *ngSwitchDefault>{{ctry.term}}</ng-container>
         </div>
