--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -49,6 +49,66 @@ body {
   flex-direction: column;
 }
 
+.align-items-center {
+  align-items: center !important;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+// Spacing
+.ml-1 {
+  margin-left: 0.25rem !important;
+}
+.ml-2 {
+  margin-left: 0.5rem !important;
+}
+.ml-3 {
+  margin-left: 1rem !important;
+}
+.ml-4 {
+  margin-left: 1.5rem !important;
+}
+.ml-5 {
+  margin-left: 3rem !important;
+}
+
+.mr-1 {
+  margin-right: 0.25rem !important;
+}
+.mr-2 {
+  margin-right: 0.5rem !important;
+}
+.mr-3 {
+  margin-right: 1rem !important;
+}
+.mr-4 {
+  margin-right: 1.5rem !important;
+}
+.mr-5 {
+  margin-right: 3rem !important;
+}
+
+$screen-sm-min: 768px;
+$screen-md-min: 992px;
+
+.col-md-3 {
+  flex-basis: 100%;
+  @media (min-width: $screen-md-min) {
+    flex-basis: 25% !important;
+   }
+  background: orange;
+}
+
+.col-sm-6 {
+  flex-basis: 100%;
+  @media (min-width: $screen-sm-min) {
+    flex-basis: 50% !important;
+   }
+  background: orange;
+}
+
 .flex-grow1 {
   flex-grow: 1;
 }
