--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <h1>Download data</h1>
-<p>
-<b>#</b> experiments selected
+<p *ngIf="total || total === 0">
+<b>{{total}}</b> experiments selected
 </p>
 
 <div class="container align-items-center">
