--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <h1>Download data</h1>
 <p *ngIf="total || total === 0">
-<b>{{total}}</b> experiments selected
+  <b>{{total}}</b> experiments selected
 </p>
 
 <div class="container align-items-center">
@@ -16,6 +16,37 @@
   <button mat-raised-button color="primary" (click)="changeRoute()">Download</button>
 </div>
 
+<div class="container w-100" id="filtered-summary">
+  <div id="cohort-count">
+    <h4 class="filter-label">cohort</h4>
+    <app-mini-donut [data]="summary.cohorts" [height]="65" [margin]="{ top: 2, bottom: 2, left: 2, right: 135 }" [cohorts]="summary.cohorts" [filterable]="false"></app-mini-donut>
+  </div>
+
+  <div class="grid-item grid-column-container" id="outcome-count">
+    <h4 class="filter-label">outcome</h4>
+    <app-mini-barplot [data]="summary.outcomes" [height]="55" [width]="75" [margin]="{ top: 2, bottom: 2, left: 50, right: 70 }" [options]="summary.outcomes" [filterable]="false"></app-mini-barplot>
+  </div>
+
+  <div class="grid-item grid-column-container" id="country-count">
+    <h4 class="filter-label">country</h4>
+    <div class="grid-row-container">
+      <app-choropleth [data]="summary.countries"></app-choropleth>
+      <app-dot-plot [data]="summary.countries"></app-dot-plot>
+    </div>
+  </div>
+
+  <div class="grid-item grid-column-container" id="outcome-count">
+    <h4 class="filter-label">host</h4>
+    <app-mini-barplot [data]="summary.species" [height]="55" [width]="75" [margin]="{ top: 2, bottom: 2, left: 50, right: 70 }" [options]="summary.species" [filterable]="false"></app-mini-barplot>
+  </div>
+
+  <div class="grid-item grid-row-container" id="year-file-count">
+    <div id="year-count" class="grid-column-container">
+      <h4 class="filter-label">year</h4>
+      <app-filterable-histogram [data]="summary.years" [xDomain]="[1979, 2020]" [filterable]="false" [height]="40" [width]="110" [min_width_unknown]="0" [unknown]="false" [numXTicks]="3" [filter_title]="'uniqueid'"></app-filterable-histogram>
+    </div>
+  </div>
+</div>
 
 <div class="container w-100">
   <div class="col-md-3">
