--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="container w-100">
-  <div class="col-md-3">
+  <div class="col-md-3" *ngIf="filters">
     <h6>Filters</h6>
     <div class="filter-group" *ngFor="let filter in filters">
       <h6>{{filter.name}}</h6>
