--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -53,10 +53,10 @@
 <div class="container w-100">
   <div class="col-md-3" *ngIf="filters">
     <h6>Filters</h6>
-    <div class="filter-group" *ngFor="let filter in filters">
+    <div class="filter-group" *ngFor="let filter of filters">
       <h6>{{filter.name}}</h6>
       <ul>
-        <li *ngFor="let option in filter.terms">
+        <li *ngFor="let option of filter.terms">
           {{option.term}} ({{option.count}})
           </li>
         </ul>
