add in CBC blood counts

--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -818,7 +818,7 @@ button.stepper-button {
   background: #fbe6ff;
 }
 
-.blood-chemistry {
+.blood-chemistry-vhf, .blood-counts-vhf {
   background: #ffe7c7;
 }
 
