WIP: download data

--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -11,7 +11,7 @@
     </mat-checkbox>
   </form>
 
-  <button mat-raised-button color="primary" (click)="changeRoute()">Download</button>
+  <button mat-raised-button color="primary" (click)="downloadData()">Download</button>
 </div>
 
 <p *ngIf="total || total === 0">
