--- a/sample-viewer/src/app/download-expts/download-expts.component.html
+++ b/sample-viewer/src/app/download-expts/download-expts.component.html
@@ -1,1 +1,12 @@
-<p>download-expts works!</p>
+<h1>Download experimental data</h1>
+
+<div *ngIf="datasets$ | async as datasets">
+  <div *ngFor="let dataset of datasets; let idx = index" class="mb-3">
+    <a class="dataset-links" [routerLink]="['/download', {id: dataset.identifer}]">
+      {{dataset.name}}
+    </a>
+    <small>
+      {{dataset.description}}
+    </small>
+  </div>
+</div>
