--- a/sample-viewer/src/app/download-expts/download-expts.component.html
+++ b/sample-viewer/src/app/download-expts/download-expts.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="datasets$ | async as datasets">
   <div *ngFor="let dataset of datasets; let idx = index" class="container-column mb-4">
-    <a class="dataset-links" [routerLink]="['/download', dataset.identifer]">
+    <a class="dataset-links" [routerLink]="['/download', dataset.identifier]">
       {{dataset.name}}
     </a>
     <small>
