tester: formgroups for filter selection

--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -1,5 +1,27 @@
 <h1>Download data</h1>
 
+<form [formGroup]="filterForm" *ngIf="filterForm">
+  <div formArrayName="cohort">
+    <div *ngFor="let option of filterForm.get('cohort')['controls']; let i = index">
+      <div [formGroupName]="i">
+        <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
+          {{option.get("term").value}}
+        </mat-checkbox>
+        </div>
+      </div>
+    </div>
+
+  <div formArrayName="outcome">
+    <div *ngFor="let option of filterForm.get('outcome')['controls']; let i = index">
+      <div [formGroupName]="i">
+        <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
+          {{option.get("term").value}}
+        </mat-checkbox>
+        </div>
+      </div>
+    </div>
+  </form>
+
 
 <div class="container align-items-center mb-4">
   <form [formGroup]="whichDataForm" class="container">
