--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -3,7 +3,7 @@
 <form [formGroup]="filterForm" *ngIf="filterForm">
   <div formArrayName="cohort">
     <div *ngFor="let option of filterForm.get('cohort')['controls']; let i = index">
-      <div formGroupName="i">
+      <div formGroupName="{{i}}">
         <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
           {{option.get("term").value}}
         </mat-checkbox>
@@ -13,7 +13,7 @@
 
   <div formArrayName="outcome">
     <div *ngFor="let option of filterForm.get('outcome')['controls']; let i = index">
-      <div formGroupName="i">
+      <div formGroupName="{{i}}">
         <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
           {{option.get("term").value}}
         </mat-checkbox>
