--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -4,7 +4,7 @@
 <template *ngFor="let key of filterKeys">
   <h1>{{key}}</h1>
   <div [formArrayName]="key">
-    <div *ngFor="let option of filterForm.get('outcome')['controls']; let i = index">
+    <div *ngFor="let option of filterForm.get(key)['controls']; let i = index">
       <div [formGroupName]="i">
         <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
           {{option.get("term").value}} ({{option.get("count").value}})
