--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -6,7 +6,7 @@
     <div formArrayName="{{key}}">
       <div *ngFor="let option of filterForm.get(key)['controls']; let i = index">
         <div formGroupName="{{i}}">
-          <mat-checkbox color="primary" [formControl]="option.get('selected')" class="mr-3">
+          <mat-checkbox color="primary" formControl="option.get('selected')" class="mr-3">
             {{option.get("term").value}} ({{option.get("count").value}})
           </mat-checkbox>
         </div>
