add dataset name

--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -1,4 +1,4 @@
-<h1>Download data</h1>
+<h1>Download {{ datasetName }} data</h1>
 
 <div class="container align-items-center mb-4">
   <form [formGroup]="whichDataForm" class="container">
