--- a/sample-viewer/src/app/download/download.component.scss
+++ b/sample-viewer/src/app/download/download.component.scss
@@ -1,6 +1,6 @@
 @import '../../sass/variables.scss';
 
-.filter-container {
+.dwnld-filter-container {
   background: $grey-50;
   border-right: 2px solid $grey-200;
   padding: 0.5rem 1rem;
