--- a/sample-viewer/src/app/download/download.component.scss
+++ b/sample-viewer/src/app/download/download.component.scss
@@ -5,3 +5,14 @@
   border-right: 2px solid $grey-200;
   padding: 0.5rem 1rem;
 }
+
+.filter-group {
+  border-bottom: 1px solid $grey-300;
+  padding-bottom: 0.5rem;
+}
+
+#filtered-summary {
+  border-top: 1px solid $grey-600;
+  border-bottom: 1px solid $grey-600;
+  padding: 0.5rem 0;
+}
