--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -14,38 +14,40 @@
 </div>
 
 
-<div class="container w-100" id="filtered-summary" *ngIf="summary">
+<div class="container-column w-100" id="filtered-summary" *ngIf="summary">
   <h2 *ngIf="total || total === 0">
     You selected <b>{{total}}</b> experiments
   </h2>
 
-  <div id="cohort-count" class="mr-3">
-    <h4 class="filter-label">cohort</h4>
-    <app-mini-donut [data]="summary['cohorts']" [height]="65" [margin]="{ top: 2, bottom: 2, left: 2, right: 135 }" [filterable]="false"></app-mini-donut>
-  </div>
-
-  <div class="grid-item grid-column-container mr-3" id="outcome-count">
-    <h4 class="filter-label">outcome</h4>
-    <app-mini-barplot [data]="summary['outcomes']" [height]="55" [width]="75" [margin]="{ top: 2, bottom: 2, left: 50, right: 70 }" [filterable]="false"></app-mini-barplot>
-  </div>
-
-  <div class="grid-item grid-column-container mr-3" id="country-count">
-    <h4 class="filter-label">country</h4>
-    <div class="grid-row-container">
-      <app-choropleth [data]="summary['countries']"></app-choropleth>
-      <app-dot-plot [data]="summary['countries']"></app-dot-plot>
+  <div class="container">
+    <div id="cohort-count" class="mr-3">
+      <h4 class="filter-label">cohort</h4>
+      <app-mini-donut [data]="summary['cohorts']" [height]="65" [margin]="{ top: 2, bottom: 2, left: 2, right: 135 }" [filterable]="false"></app-mini-donut>
     </div>
-  </div>
 
-  <div class="grid-item grid-column-container mr-3" id="outcome-count">
-    <h4 class="filter-label">host</h4>
-    <app-mini-barplot [data]="summary['species']" [height]="55" [width]="75" [margin]="{ top: 2, bottom: 2, left: 50, right: 170 }" [filterable]="false"></app-mini-barplot>
-  </div>
+    <div class="grid-item grid-column-container mr-3" id="outcome-count">
+      <h4 class="filter-label">outcome</h4>
+      <app-mini-barplot [data]="summary['outcomes']" [height]="55" [width]="75" [margin]="{ top: 2, bottom: 2, left: 50, right: 70 }" [filterable]="false"></app-mini-barplot>
+    </div>
 
-  <div class="grid-item grid-row-container mr-3" id="year-file-count">
-    <div id="year-count" class="grid-column-container">
-      <h4 class="filter-label">year</h4>
-      <app-filterable-histogram [data]="summary['years']" [xDomain]="[1979, 2020]" [filterable]="false" [height]="40" [width]="110" [min_width_unknown]="0" [unknown]="false" [numXTicks]="3" [filter_title]="'uniqueid'"></app-filterable-histogram>
+    <div class="grid-item grid-column-container mr-3" id="country-count">
+      <h4 class="filter-label">country</h4>
+      <div class="grid-row-container">
+        <app-choropleth [data]="summary['countries']"></app-choropleth>
+        <app-dot-plot [data]="summary['countries']"></app-dot-plot>
+      </div>
+    </div>
+
+    <div class="grid-item grid-column-container mr-3" id="outcome-count">
+      <h4 class="filter-label">host</h4>
+      <app-mini-barplot [data]="summary['species']" [height]="55" [width]="75" [margin]="{ top: 2, bottom: 2, left: 50, right: 170 }" [filterable]="false"></app-mini-barplot>
+    </div>
+
+    <div class="grid-item grid-row-container mr-3" id="year-file-count">
+      <div id="year-count" class="grid-column-container">
+        <h4 class="filter-label">year</h4>
+        <app-filterable-histogram [data]="summary['years']" [xDomain]="[1979, 2020]" [filterable]="false" [height]="40" [width]="110" [min_width_unknown]="0" [unknown]="false" [numXTicks]="3" [filter_title]="'uniqueid'"></app-filterable-histogram>
+      </div>
     </div>
   </div>
 </div>
