--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -57,7 +57,7 @@
     <h5 class="m-0">Filters</h5>
 
     <form [formGroup]="filterForm">
-      <div *ngFor="let key of filterKeys" class="mb-3">
+      <div *ngFor="let key of filterKeys" class="mb-3 filter-group">
         <h6 class="m-0">{{key}}</h6>
         <div formArrayName="{{key}}">
           <div *ngFor="let option of filterForm.get(key)['controls']; let i = index">
