--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -73,9 +73,19 @@
   </div>
 
   <div>
-    Table
-    <table>
+    <table mat-table [dataSource]="dataSource" matSort id="preview_samples">
 
+      <ng-container *ngFor="let key of displayedColumns" [matColumnDef]="key">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">{{ key }}</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element[key] }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <mat-paginator [pageSizeOptions]="[10, 20, 100]" [pageSize]="20" showFirstLastButtons></mat-paginator>
+
   </div>
 </div>
