--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -78,6 +78,7 @@
       <ng-container *ngFor="let key of displayedColumns" [matColumnDef]="key">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">{{ key }}</th>
         <td mat-cell *matCellDef="let element">
+          {{element}}
           {{ element[key] }}
         </td>
       </ng-container>
