--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -75,11 +75,18 @@
   <div>
     <table mat-table [dataSource]="dataSource" matSort id="preview_samples">
 
-      <ng-container *ngFor="let key of displayedColumns" [matColumnDef]="key">
+      <!-- <ng-container *ngFor="let key of displayedColumns" [matColumnDef]="key">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">{{ key }}</th>
         <td mat-cell *matCellDef="let element">
           {{element}}
           {{ element[key] }}
+        </td>
+      </ng-container> -->
+
+      <ng-container matColumnDef="cohort">
+        <th mat-header-cell *matHeaderCellDef>cohort</th>
+        <td mat-cell *matCellDef="let element">
+          <span class="cohort" [ngClass]="element.cohort">{{ element.cohort }}</span>
         </td>
       </ng-container>
 
