--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -72,20 +72,20 @@
     </form>
   </div>
 
-  <div  *ngIf="dataSource && dataSource.data">
-    <table mat-table [dataSource]="dataSource" matSort id="preview_samples">
+  <div class="download-table" *ngIf="dataSource && dataSource.data">
+    <table mat-table [dataSource]="dataSource" matSort class="download-table">
 
-      <ng-container *ngFor="let key of displayedColumns" [matColumnDef]="key">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">{{ key }}</th>
+      <ng-container *ngFor="let key of displayedColumns" [matColumnDef]="key.id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">{{ key.label }}</th>
         <td mat-cell *matCellDef="let element">
-          {{ key.toLowerCase().includes("date") ? (element[key] | date:'d MMM yyyy') : element[key] }}
+          {{ key.toLowerCase().includes("date") ? (element[key.id] | date:'d MMM yyyy') : element[key.id] }}
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns.map(d => d.id)"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns.map(d => d.id);"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[10, 20, 100]" [pageSize]="20" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]" [pageSize]="10" showFirstLastButtons></mat-paginator>
 
   </div>
 </div>
