--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -75,15 +75,15 @@
   <div class="download-table" *ngIf="dataSource && dataSource.data">
     <table mat-table [dataSource]="dataSource" matSort class="download-table">
 
-      <ng-container *ngFor="let key of displayedColumns" [matColumnDef]="key.id">
+      <ng-container *ngFor="let key of columns" [matColumnDef]="key.id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">{{ key.label }}</th>
         <td mat-cell *matCellDef="let element">
           {{ key.toLowerCase().includes("date") ? (element[key.id] | date:'d MMM yyyy') : element[key.id] }}
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns.map(d => d.id)"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns.map(d => d.id);"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[10, 25, 100]" [pageSize]="10" showFirstLastButtons></mat-paginator>
 
