--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -78,10 +78,12 @@
       <ng-container *ngFor="let key of columns" [matColumnDef]="key.id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">{{ key.label }}</th>
         <td mat-cell *matCellDef="let element" class="td-padded">
+          <span *ngIf="key.id == 'file'">
             <a [href]="element.contentUrl" target="_blank">
               {{element.file}}
             </a>
-            {{ key.id.toLowerCase().includes("date") ? (element[key.id] | date:'d MMM yyyy') : element[key.id] }}
+          </span>
+          {{ key.id.toLowerCase().includes("date") ? (element[key.id] | date:'d MMM yyyy') : element[key.id] }}
         </td>
       </ng-container>
 
