--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -1,4 +1,8 @@
 <h1>Download {{ datasetName }} data</h1>
+<div class="spinner-container container" *ngIf="isLoading$ | async">
+  <h1>LOADING!</h1>
+  <mat-spinner></mat-spinner>
+</div>
 
 <div class="container align-items-center mb-4">
   <form [formGroup]="whichDataForm" class="container">
