--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -1,5 +1,5 @@
 <h1>Download {{ datasetName }} data</h1>
-<div class="spinner-container container" *ngIf="isLoading$ | async">
+<div class="spinner-container-centered container" *ngIf="isLoading$ | async">
   <mat-spinner></mat-spinner>
 </div>
 
