update button css

--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -126,6 +126,27 @@ body {
   margin-bottom: 3rem !important;
 }
 
+.my-1 {
+  margin-top: 0.25rem !important;
+  margin-bottom: 0.25rem !important;
+}
+.my-2 {
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
+}
+.my-3 {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
+.my-4 {
+  margin-top: 1.5rem !important;
+  margin-bottom: 1.5rem !important;
+}
+.my-5 {
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
+}
+
 $screen-sm-min: 768px;
 $screen-md-min: 992px;
 
