--- a/sample-viewer/src/app/download/download.component.html
+++ b/sample-viewer/src/app/download/download.component.html
@@ -62,6 +62,7 @@
 
     <form [formGroup]="filterForm">
       <div *ngFor="let key of filterKeys" class="mb-3 filter-group">
+        <ng-template *ngIf="filterForm.get(key)['controls'].get('term')">
         <h6 class="m-0">{{key}}</h6>
         <div formArrayName="{{key}}">
           <div *ngFor="let option of filterForm.get(key)['controls']; let i = index">
@@ -72,6 +73,7 @@
             </small>
           </div>
         </div>
+        </ng-template>
       </div>
     </form>
   </div>
